[package]
name = "bitcoin-taproot-primitives"
version = "0.1.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin"
description = "Taproot stuff destined for bitcoin-primitives"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "types"]
readme = "README.md"
edition = "2021"
rust-version = "1.74.0"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["alloc", "crypto/std", "hashes/std", "internals/std", "serde?/std", "secp256k1/std"]
alloc = ["crypto/alloc", "hashes/alloc", "internals/alloc", "secp256k1/alloc"]
serde = ["dep:serde", "crypto/serde", "hashes/serde", "internals/serde", "secp256k1/serde"]

[dependencies]
crypto = { package = "bitcoin-crypto", path = "../crypto", default-features = false }
hashes = { package = "bitcoin_hashes", path = "../hashes", version = "0.19.0", default-features = false, features = ["hex"] }
internals = { package = "bitcoin-internals", path = "../internals", version = "0.5.0" }

secp256k1 = { version = "0.32.0-beta.2", default-features = false }
serde = { version = "1.0.195", default-features = false, features = [ "derive" ], optional = true }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
